# bls12_381

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASES.md  WASM.md  rust-toolchain.toml
.github/workflows/: ci.yml  dusk_ci.yml  lints-beta.yml  lints-stable.yml
benches/: groups.rs  hash_to_curve.rs  scalar.rs
risc0_wrapper/: Cargo.toml  README.md
risc0_wrapper/methods/: Cargo.toml
risc0_wrapper/methods/guest/: Cargo.toml
risc0_wrapper/src/: lib.rs
scripts/: bls-make-lambda-residues.ipynb
scripts/.ipynb_checkpoints/: bls-make-lambda-residues-checkpoint.ipynb
src/: choice.rs  fp.rs  fp12.rs  fp2.rs  fp6.rs  g1.rs  g2.rs  hash.rs  hashable.rs  isogeny.rs  lib.rs  multiscalar_mul.rs  pairings.rs  scalar.rs  serde.rs  util.rs
src/dusk/: choice.rs  mod.rs  multiscalar_mul.rs
src/fp/: dusk.rs  magnitudes.rs
src/fp2/: dusk.rs
src/fp6/: dusk.rs
src/g1/: dusk.rs
src/g2/: dusk.rs
src/hash_to_curve/: chain.rs  expand_msg.rs  map_g1.rs  map_g2.rs  map_scalar.rs  mod.rs
src/notes/: design.rs
src/pairings/: dusk.rs
src/scalar/: dusk.rs
src/tests/: mod.rs
tests/: expand_msg.rs  hash_to_curve_g1.rs  hash_to_curve_g2.rs
