[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "Implementation of the BLS12-381 pairing-friendly elliptic curve construction"
documentation = "https://docs.rs/bls12_381/"
homepage = "https://github.com/zkcrypto/bls12_381"
license = "MIT/Apache-2.0"
name = "bls12_381"
repository = "https://github.com/zkcrypto/bls12_381"
version = "0.8.0"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dev-dependencies]
csv = "1.2.1"
criterion = "0.5"
hex = "0.4"
rand_xorshift = "0.3"
sha2 = "0.10"
sha3 = "0.10"

[[bench]]
name = "groups"
harness = false
required-features = ["groups"]

[dependencies.elliptic-curve]
version = "0.13"
default-features = false

[dependencies.ff]
version = "0.13"
default-features = false

[dependencies.group]
version = "0.13"
default-features = false
optional = true

[dependencies.pairing]
version = "0.23"
optional = true

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "2.4"
default-features = false

[dependencies.zeroize]
version = "1.6"
default-features = false
optional = true

[dependencies.arrayref]
version = "0.3"

[features]
default = ["groups", "pairings", "alloc", "bits", "hashing"]
bits = ["ff/bits"]
groups = ["group"]
hashing = ["elliptic-curve/hash2curve"]
pairings = ["groups", "pairing"]
alloc = ["group/alloc"]
experimental = []
nightly = ["subtle/nightly"]
