[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
    "CPerezz <carlos@dusk.network>",
]
description = "Fork of the implementation of the BLS12-381 pairing-friendly elliptic curve construction with some extra tooling needed by the Dusk team"
documentation = "https://docs.rs/dusk-bls12_381/"
homepage = "https://github.com/dusk-network/bls12_381"
license = "MIT/Apache-2.0/MPL-2.0"
name = "dusk-bls12_381"
repository = "https://github.com/dusk-network/bls12_381"
version = "0.11.3"
edition = "2021"

keywords = ["cryptography", "bls12_381", "zk-snarks", "ecc", "elliptic-curve"]
categories =["algorithms", "cryptography", "development-tools"]
exclude = [
    ".github/workflows/ci.yml",
    ".gitignore",
]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dev-dependencies]
csv = ">= 1.0, < 1.2" # csv 1.2 has MSRV 1.60
criterion = "0.3"
hex = "0.4"
rand_xorshift = "0.3"
sha2 = "0.9"
sha3 = "0.9"
# Dev-dependencies added by Dusk
bincode = "1"
rkyv = {version = "0.7", default-features = false, features = ["size_32"]}

[[bench]]
name = "groups"
harness = false
required-features = ["groups"]

[[bench]]
name = "hash_to_curve"
harness = false
required-features = ["experimental"]

[dependencies.digest]
version = "0.9"
optional = true

[dependencies.ff]
version = "0.13"
default-features = false

[dependencies.group]
version = "0.13"
default-features = false
optional = true

[dependencies.pairing]
version = "0.23"
optional = true

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "2"
default-features = false

[dependencies.zeroize]
version = "1"
default-features = false
optional = true

# Start of dependencies added by Dusk
[dependencies.byteorder]
version = "1"
default-features = false
optional = true

[dependencies.rayon]
version = "1"
optional = true

[dependencies.serde]
version = "1"
optional = true

[dependencies.rkyv]
version = "0.7"
default-features = false
optional = true

[dependencies.bytecheck]
version = "0.6"
default-features = false
optional = true

[dependencies.dusk-bytes]
version = "0.1"
# End

[features]
default = ["groups", "pairings", "alloc", "bits", "parallel", "byteorder"]
bits = ["ff/bits"]
groups = ["group"]
pairings = ["groups", "pairing"]
alloc = ["group/alloc"]
experimental = ["digest"]
nightly = ["subtle/nightly"]
# Features added by Dusk
parallel = ["rayon"]
rkyv-impl = ["rkyv", "rkyv/alloc", "bytecheck"]
