[package]
name = "risc0-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-wrapper-methods = { path = "methods" }
#risc0-zkvm = { version = "1.2.1", features = [ "unstable", ] }
risc0-zkvm = { path = "../../risc0/risc0/zkvm/", features = [ "unstable", ] }
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
